--- a/assets/style.css
+++ b/assets/style.css
@@ -98,8 +98,8 @@ input[type="submit"] {
     align-self: center;
 }
 form p {
-    text-align: center;
     font-size: 1.5rem;
-    width: 40vw;
-    margin-top: 2rem;
+    text-align: center;
+    width: 80rem;
+    margin-bottom: 2rem;
 }
